--- a/WIPO/style.css
+++ b/WIPO/style.css
@@ -334,7 +334,14 @@ button:hover {
     max-width: 1060px;
     background-color: white;
     margin: 50px auto;
-    height: 1600px;
+    height: 1650px;
+    box-shadow: 0px 2px 20px rgba(21, 24, 36, 0.15993);
+}
+.about-wrap-demo {
+    max-width: 1060px;
+    background-color: white;
+    margin: 50px auto;
+    height: 950px;
     box-shadow: 0px 2px 20px rgba(21, 24, 36, 0.15993);
 }
 .umlag-tit {
@@ -358,6 +365,14 @@ button:hover {
     height: 1300px;
     box-shadow: 0px 2px 20px rgba(21, 24, 36, 0.15993);
 }
+.prokrutka {
+    width:1040px;
+    height:600px;
+    background: #fff;
+    border: 1px solid #C1C1C1;
+    overflow: auto;
+}
+
 
 /* Kapitaldeckungsverfahren END */
 
@@ -371,13 +386,13 @@ button:hover {
 }
 /* STYLES SPECIFIC TO FOOTER  */
 .footer {
-    width: 100%;
+    width: 100%px;
     position: relative;
     height: auto;
     background-color: #747479;
 }
 .footer .col {
-    width: 190px;
+    width: 130px;
     height: auto;
     float: right;
     box-sizing: border-box;
@@ -438,10 +453,15 @@ button:hover {
     -webkit-transition: .1s;
     -moz-transition: .1s;
 }
+.text-main-history {
+    margin: 0 10px 0 10px;
+    font-size: 22px;
+}
 
 @media (max-width: 1440px) {
     .header-link {
         font-size: 18px;
     }
 }
+
 
